--- a/TP3 - Fonctions multi-dimensionnelles, optimisation.ipynb
+++ b/TP3 - Fonctions multi-dimensionnelles, optimisation.ipynb
@@ -58,15 +58,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-10T10:35:55.779385Z",
+     "start_time": "2024-10-10T10:35:55.766369Z"
+    }
+   },
    "source": [
     "A = np.array([[2, -1],[-1, 1]])\n",
     "B = np.array([[-2, 2],[2, -4]])\n",
     "C = np.array([[2, 2, 1],[2, 3,0],[1, 0, 2]])\n",
-    "D = np.array([[1, 1, 1],[1, 0, 1],[1, 1, 0]])"
-   ]
+    "D = np.array([[1, 1, 1],[1, 0, 1],[1, 1, 0]])\n",
+    "print(A)\n",
+    "print(B)\n",
+    "print(C)\n",
+    "print(D)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2 -1]\n",
+      " [-1  1]]\n",
+      "[[-2  2]\n",
+      " [ 2 -4]]\n",
+      "[[2 2 1]\n",
+      " [2 3 0]\n",
+      " [1 0 2]]\n",
+      "[[1 1 1]\n",
+      " [1 0 1]\n",
+      " [1 1 0]]\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-10T10:58:34.951064Z",
+     "start_time": "2024-10-10T10:58:34.941019Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def definiePositiveValeursPropre(m: np.ndarray) -> bool:\n",
+    "    return np.all( la.eigvals(m) > 0 )\n",
+    "\n",
+    "def definiePositiveDeterminant(m: np.ndarray) -> bool:\n",
+    "    for i in range(1, m.shape[0]+1):\n",
+    "        if la.det(m[:i, :i]) <= 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "    #return np.all( [(la.det(m[:i, :i]) > 0) for i in range(1, m.shape[0]+1)]  )\n",
+    "\n",
+    "for m in [A, B, C, D]:\n",
+    "    print( definiePositiveValeursPropre(m), definiePositiveDeterminant(m))"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True\n",
+      "False False\n",
+      "True True\n",
+      "False False\n"
+     ]
+    }
+   ],
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
